--- a/project.json
+++ b/project.json
@@ -18,10 +18,11 @@
         "assets": [
           {
             "glob": "**/*",
-            "input": "public"
+            "input": "node_modules/@taiga-ui/icons/src",
+            "output": "assets/taiga-ui/icons"
           }
         ],
-        "styles": ["./src/styles.css"]
+        "styles": ["./src/styles.less"]
       },
       "configurations": {
         "production": {
@@ -76,7 +77,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectName}"],
       "options": {
-        "jestConfig": "jest.config.ts",
+        "jestConfig": "jest.config.app.ts",
         "tsConfig": "tsconfig.spec.json"
       }
     },
