--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "jest-preset-angular": "~15.0.0",
     "jest-util": "^30.0.2",
     "nx": "21.5.2",
-    "prettier": "^2.6.2",
+    "prettier": "^3.5.3",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
