--- a/libs/my-ui-lib/tsconfig.lib.json
+++ b/libs/my-ui-lib/tsconfig.lib.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "declarationMap": true,
-    "inlineSources": true
+    "declarationMap": true
   },
   "exclude": [
     "src/**/*.spec.ts",
