--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,19 +5,11 @@
     "emitDecoratorMetadata": false,
     "target": "es2022",
     "module": "preserve",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "baseUrl": ".",
     "paths": {
-      "@async-select/my-ui-lib": [
-        "libs/my-ui-lib/src/index.ts"
-      ]
+      "@async-select/my-ui-lib": ["libs/my-ui-lib/src/index.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
